# first-project

Django20/: .env  .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
Django20/mysite/: db.sqlite3
Django20/mysite/database/: db.sqlite3
Django20/mysite/mysite/: settings.py
Django20/mysite/shopapp/: urls.py  views.py
Django20/mysite/shopapp/templates/shopapp/: order_user.html
